// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotchedBox /> can be below 1`] = `
<div
  className="box border"
>
  <div
    className="notch notch_position notch_below border"
  />
  <div
    className="content"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can be inline 1`] = `
<div
  className="box border box_inline"
>
  <div
    className="notch notch_position border"
  />
  <div
    className="content"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can be inverted 1`] = `
<div
  className="box"
>
  <div
    className="notch notch_position inverted"
  />
  <div
    className="content inverted"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can have a negative offet 1`] = `
<div
  className="box border"
>
  <div
    className="notch border inline-0"
  />
  <div
    className="content"
  >
    hello world
  </div>
</div>
`;

exports[`<NotchedBox /> can have an offet of 0 1`] = `
<div
  className="box border"
>
  <div
    className="notch notch_position border"
  />
  <div
    className="content"
  >
    hello world
  </div>
</div>
`;
